# reddit_realtime_sentiment_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: style_checks.yml
docker/development/: Dockerfile
docker/kafka/: Dockerfile
docker/reddit-streamer/: Dockerfile
docker/spark-kafka-sentiment/: Dockerfile
docker/spark_processing/: Dockerfile
docker/streamer/: Dockerfile
docker/streamlit/: Dockerfile
kubernetes/: kafka.yaml  postgres-db.yaml  python-env.yaml  reddit-streamer.yaml  spark-kafka-sentiment.yaml  streamlit-sentiment-dashboard.yaml  zookeeper.yaml
notebooks/: reddit_stream.py  reddit_stream_test.py  spark_processing.py
scripts/: kafka-healthcheck.sh
scripts/gcloud/: image-build.sh
src/: Dockerfile  constants.py  logger_definition.py  schemas.py  utils.py
src/db_scripts/: Dockerfile  db_connection.py  db_mappings.py  test_database_connection.py
src/sentiment_analysis/: spark_kafka_sentiment.py
src/streamer/: reddit_streamer.py
src/streamlit/: sentiment_analysis_streamlit.py
