[tool.poetry]
name = "reddit-realtime-sentiment-analysis"
version = "0.1.0"
description = "Real time sentiment analysis on reddit"
authors = ["guzmanvitar <guzmanvitar@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.36"
praw = "^7.8.1"
six = "^1.16.0"
kafka-python-ng = "^2.2.3"
pyspark = "^3.5.3"
psycopg2-binary = "^2.9.10"
numpy = "<2.0.0"
confluent-kafka = "^2.6.0"
streamlit = "^1.40.0"

[tool.poetry.group.ml.dependencies]
transformers = "^4.0.0"
torch = [
    { version = "2.0.1", markers = "sys_platform == 'darwin'" },  # macOS compatible
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'" }  # Linux CPU-only version
]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipykernel = "^6.29.5"
isort = "^5.13.2"
flake8 = "^7.1.1"
ipdb = "^0.13.13"
pre-commit = "^4.0.1"
ipython = "^8.29.0"
jupyterlab = "^4.3.0"

[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
